--- a/worldMap.html
+++ b/worldMap.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <title>Interactive Map</title>
-    <h1>World Map</h1>
+    <h1>Every Country in the World!</h1>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Yanone+Kaffeesatz:200" rel="stylesheet">
@@ -79,7 +79,7 @@
   </head>
 
   <body>
-    <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSglP8Mctkcou5ejwAuNiviGpXTZKKIqCUEHRR9JnRmSCJp7ZPzdpE4ZrJnSLqYvH7Q69uZeSTDXptH/pubhtml?widget=true&amp;headers=false">Link to Countries Data </a>
+    <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSglP8Mctkcou5ejwAuNiviGpXTZKKIqCUEHRR9JnRmSCJp7ZPzdpE4ZrJnSLqYvH7Q69uZeSTDXptH/pubhtml?widget=true&amp;headers=false">Individual Country Statistics</a>
     <div id="map-holder"></div>
     <script type="text/javascript">
 
